RESOLVED FIXED30294
[V8] Revision 49420 breaks V8 bindings adding CanvasActiveInfo
https://bugs.webkit.org/show_bug.cgi?id=30294
Summary [V8] Revision 49420 breaks V8 bindings adding CanvasActiveInfo
Dominic Cooney
Reported 2009-10-11 19:57:54 PDT
Revision 49420 <http://build.chromium.org/buildbot/waterfall.fyi/changes/3610> adds an IDL-defined CanvasActiveInfo type and a couple of methods to CanvasGraphicsContext3D which return them. These methods break the V8 bindings because there's no V8 CanvasActiveInfo binding.
Attachments
Proposed fix. Includes CanvasActiveInfo in V8 binding generation. (4.69 KB, patch)
2009-10-11 20:09 PDT, Dominic Cooney
no flags
Dominic Cooney
Comment 1 2009-10-11 20:09:12 PDT
Created attachment 41011 [details] Proposed fix. Includes CanvasActiveInfo in V8 binding generation.
Adam Barth
Comment 2 2009-10-11 20:13:03 PDT
Comment on attachment 41011 [details] Proposed fix. Includes CanvasActiveInfo in V8 binding generation. Thanks for the build fix!
WebKit Commit Bot
Comment 3 2009-10-11 20:30:46 PDT
Comment on attachment 41011 [details] Proposed fix. Includes CanvasActiveInfo in V8 binding generation. Clearing flags on attachment: 41011 Committed r49432: <http://trac.webkit.org/changeset/49432>
WebKit Commit Bot
Comment 4 2009-10-11 20:30:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.