WebCore/bindings/v8/DOMObjectsInclude.h
@@ -34,6 +34,7 @@
 #include "AbstractWorker.h"
 #include "BarInfo.h"
 #include "BeforeLoadEvent.h"
+#include "CanvasActiveInfo.h"
 #include "CanvasArray.h"
 #include "CanvasArrayBuffer.h"
 #include "CanvasBuffer.h"
