WebCore/bindings/v8/DerivedSourcesAllInOne.cpp
@@ -35,6 +35,7 @@
 #include "bindings/V8Attr.cpp"
 #include "bindings/V8BarInfo.cpp"
 #include "bindings/V8BeforeLoadEvent.cpp"
+#include "bindings/V8CanvasActiveInfo.cpp"
 #include "bindings/V8CanvasArray.cpp"
 #include "bindings/V8CanvasArrayBuffer.cpp"
 #include "bindings/V8CanvasBuffer.cpp"
